NetBSD Problem Report #43153

From www@NetBSD.org  Mon Apr 12 15:27:47 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 66C4763BCF6
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 12 Apr 2010 15:27:47 +0000 (UTC)
Message-Id: <20100412152747.3E7E763B8BC@www.NetBSD.org>
Date: Mon, 12 Apr 2010 15:27:47 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: fss error branch error
X-Send-Pr-Version: www-1.0

>Number:         43153
>Category:       kern
>Synopsis:       fss error branch error
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 12 15:30:00 +0000 2010
>Closed-Date:    Tue Apr 13 08:41:30 +0000 2010
>Last-Modified:  Tue Apr 13 08:41:30 +0000 2010
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
fss_create_snapshot() error branch might attempt to detach a disk
before one is attached.
>How-To-Repeat:
=== snip ===
#include <sys/types.h>
#include <sys/ioctl.h>
#include <sys/mount.h>

#include <dev/fssvar.h>

#include <fcntl.h>

int
main()
{
        struct fss_set fss;
        int fd;

        fd = open("/dev/rfss0", O_RDWR);
        memset(&fss, 0, sizeof(fss));
        ioctl(fd, FSSIOCSET, &fss);
}
=== snip ===

Tickling the kernel panic might also be possible with fssconfig, but it
does so many stats before making the system calls that dancing around
them takes more creativity than i have)
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: hannken@NetBSD.org
Responsible-Changed-When: Mon, 12 Apr 2010 15:46:44 +0000
Responsible-Changed-Why:
Take.


From: Juergen Hannken-Illjes <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43153 CVS commit: src/sys/dev
Date: Tue, 13 Apr 2010 07:58:55 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Tue Apr 13 07:58:55 UTC 2010

 Modified Files:
 	src/sys/dev: fss.c

 Log Message:
 fss_softc_free: don't detach a disk that is not attached.  Disk is
                 attached only if the backing store thread is running.

 Resolves PR #43153: fss error branch error


 To generate a diff of this commit:
 cvs rdiff -u -r1.67 -r1.68 src/sys/dev/fss.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Tue, 13 Apr 2010 08:41:30 +0000
State-Changed-Why:
Fixed in tree.
Thanks for the report.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.