fss_softc_free: don't detach a disk that is not attached.  Disk is                 attached only if the backing store thread is running.

Resolves PR #43153: fss error branch error